# didactic-spork

./: .env  .gitignore  .pylintrc  .windsurfrules  AGENTS.md  Bpm_Page.py  COLORS.md  FircoPage.py  FrontEndRequirements.md  ImplementationPlan.md  Mtex_Page.py  Requirements.md  Screencast from 07-23-2025 01:27:14 PM.webm  app.py  bmp_optimizations_patch.py  bpm.py  cyber_guard.py  day5c.py  error_handling_summary.md  exp.md  firco_page.py  flask_server.py  flask_server_backup.py  integrate_performance_optimizations.py  logic.md  main_logic.py  mtex.py  next_steps.md  requirements.txt  server.py  test_cases.md  tests.md  utils.py  verify_setup.py
bpm/: bmp_page_backup.py  bpm.py  bpm_page.py  bpm_page_simple.py
bpm/demos/: demo_backward_compatibility.py  (+2 more)
bpm_kiro/: bpm_page.py
firco/: firco.py  firco_page.py
helpers/: browser_utils.py  config.py  file_utils.py  firco_actions.py  firco_page.py  logging_setup.py  process_transaction.py
mcp-api-hub/: .env.example  README.md  implementation.md  pyproject.toml
mcp-api-hub/src/mcp_api_hub/: __init__.py  config.py  http_client.py  log_utils.py  logging.py  registry.py  server.py
mcp-api-hub/src/mcp_api_hub/tools/: __init__.py  bpm.py  firco.py
mcp-api-hub/tests/: test_registry.py
mtex/: Mtex_Page.py  mtex.py
public/: batch.html  bpm.html  index.html  tests-automation.html
server/: disposition_service.py  flask_server.py  server.py  test-automation-server.py  xml_processor.py
tests-automation/: disposition_service.py  test-automation-server.py  xml_processor.py
utils/: __init__.py  utils.py
(+35 files in other folders)
